--- a/analyses/templates/slowpi.html
+++ b/analyses/templates/slowpi.html
@@ -7,7 +7,7 @@
 
 	<p>This little demo uses two random numbers \(r_1\) and \(r_2\) and then does a comparison $$r_1^2 + r_2^2 < 1.0$$ to figure out whether the generated point is inside the first quadrant of the unit circle.</p>
 
-	<p>Make sure you run at least one `rqworker` in a separate terminal.</p>
+	<p><b>Make sure you run at least one <i>rqworker</i> in a separate terminal window.</b></p>
 
 	<pre id="log"></pre>
 {% endblock %}
