Use new include_src() and update some PEP8 rules.

--- a/analyses/templates/mpld3PointLabel.html
+++ b/analyses/templates/mpld3PointLabel.html
@@ -1,4 +1,7 @@
+{% from 'macros.html' import include_src %}
 {% extends "base.html" %}
+
+
 {% block title %}mpld3PointLabel{% endblock %}
 
 
@@ -17,6 +20,11 @@ this documentation is a block of `markdown` embedded in the HTML.
 
 <div id="mpld3canvas"></div>
 <pre id="log"></pre>
+
+<br /><br /><hr />
+<h3>Source Code</h3>
+mpld3PointLabel.py: {{ include_src('mpld3PointLabel.py', 'python') }}
+mpld3PointLabel.html: {{ include_src('templates/mpld3PointLabel.html') }}
 {% endblock %}
 
 
