--- a/analyses/templates/mpld3pi.html
+++ b/analyses/templates/mpld3pi.html
@@ -1,4 +1,7 @@
+{% from 'macros.html' import include_src %}
 {% extends "base.html" %}
+
+
 {% block title %}mpld3pi{% endblock %}
 
 
@@ -9,14 +12,20 @@
 </h1>
 
 <p>This little demo uses two random numbers \(r_1\) and \(r_2\) and
-then does a comparison $$r_1^2 + r_2^2 < 1.0$$ to figure out whether
+then does a comparison $$r_1^2 + r_2^2 &le; 1.0$$ to figure out whether
 the generated point is inside the first quadrant of the unit circle.</p>
 
-<p>Below are histograms created with <i>matplotlib</i> and rendered in <i>d3.js</i> using <i>mpld3</i>.</p> 
+<p>Below are histograms created with <i>matplotlib</i> and rendered 
+in <i>d3.js</i> using <i>mpld3</i>.</p> 
 
 <div id="mpld3canvas"></div>
 
 <pre id="log"></pre>
+
+<br /><br /><hr />
+<h3>Source Code</h3>
+mpld3pi.py: {{ include_src('mpld3pi.py', 'python') }}
+mpld3pi.html: {{ include_src('templates/mpld3pi.html') }}
 {% endblock %}
 
 
