--- a/analyses/templates/simplepi.html
+++ b/analyses/templates/simplepi.html
@@ -1,4 +1,7 @@
+{% from 'macros.html' import include_src %}
 {% extends "base.html" %}
+
+
 {% block title %}simplepi{% endblock %}
 
 
@@ -9,10 +12,15 @@
 </h1>
 
 <p>This little demo uses two random numbers \(r_1\) and \(r_2\) and
-then does a comparison $$r_1^2 + r_2^2 < 1.0$$ to figure out whether
+then does a comparison $$r_1^2 + r_2^2 &le; 1.0$$ to figure out whether
 the generated point is inside the first quadrant of the unit circle.</p>
 
 <pre id="log"></pre>
+
+<br /><br /><hr />
+<h3>Source Code</h3>
+simplepi.py: {{ include_src('simplepi.py', 'python') }}
+simplepi.html: {{ include_src('templates/simplepi.html') }}
 {% endblock %}
 
 
