--- a/analyses/templates/angular.html
+++ b/analyses/templates/angular.html
@@ -6,67 +6,77 @@
 
 
 {% block content %}
+{% filter markdown %}
+# Angular.js Test
+
+[angular.js](https://angularjs.org/) is a popular MVW (Model-View-Whatever) framework. On the [angular.js](https://angularjs.org/) front page, scroll down to __The Basics__ to see an overview of `angular.js` features.
+{% endfilter %}
+
+<br /><br />
+
 <div ng-app="angularApp" ng-strict-di>
-	<ul ng-controller="navCtrl" class="nav nav-tabs">
-        <li class="[[navClass('home')]]"><a href='#/home'>Home</a></li>
-        <li class="[[navClass('experiment')]]"><a href='#/experiment'>Experiment</a></li>
-        <li class="[[navClass('logmessages')]]"><a href='#/logmessages'>Log Messages</a></li>
-        <li class="[[navClass('sourcecode')]]"><a href='#/sourcecode'>Source Code</a></li>
+<div ng-controller="navCtrl"> 
+    <ul class="nav nav-pills">
+        <li ng-class="{active: navCheck('home')}"><a href='#/home'>Home</a></li>
+        <li ng-class="{active: navCheck('simplepi')}"><a href='#/simplepi'>Simplepi</a></li>
+        <li ng-class="{active: navCheck('logmessages')}"><a href='#/logmessages'>Log Messages</a></li>
+        <li ng-class="{active: navCheck('sourcecode')}"><a href='#/sourcecode'>Source Code</a></li>
     </ul>
 
-    <div class="view" id="home" ng-controller="test">
-    	<h1>Angular.js Test</h1>
-
+    <div ng-show="navCheck('home')" ng-controller="testingAngular">
 {% filter markdown %}
-The standard hello world example for frameworks like `angular.js` is:
+### Angular.js Introduction
+
+This page shows two of `angular.js` most popular applications. First, you get the nav-bar on top almost for free. The four tabs it accesses are part of a single page. This is pure JavaScript and you always stay inside this one page (even though the url bar of your browser updates). Second, the standard hello world example for frameworks like `angular.js` is tested below.
+
+The `simplepi` example that is also included here (in the other tabs) makes use of angular's data-binding. When a `status` signal is received from the Databench backend, the callback function does not use `jQuery` anymore to modify the DOM, but simply assigns the new estimate of \\(\\pi\\) to a variable of an angular controller, say `pi`. In the Databench frontend, the `<span id="pi">0.0</span>` is replaced with an angular variable placeholder <code ng-non-bindable>[[pi]]</code>.
+
+
+### Live Demo of Data Binding
+
+Here is the standard code and right below is the live demo.
 {% endfilter %}
 
 <div ng-non-bindable>
 {% highlight 'html' %}
-<input ng-model="chapter"><br />
-What you just typed: [[chapter]]
+<input type="text" ng-model="chapter">
+<p>What you just typed: <code>[[chapter]]</code></p>
 {% endhighlight %}
 </div>
 
-		<h3>Live Demo</h3>
-		<div class="row">
-			<div class="col-md-6">
-				<input type="text" class="form-control"
-				       autocomplete="off" autofocus ng-model="chapter" />
-			</div>
-			<div class="col-md-6">
-				What you just typed: 
-				<span class="label label-info">[[chapter]]</span>
-			</div>
-		</div>
-
-		<h1>Simplepi</h1>
-		<p>Click on the Experiment, Log Messages and Source Code tabs. This
-		demo is a modified version of the simplepi demo and all the outputs
-		are shown under these tabs.</p>
+        <div class="row">
+            <div class="col-md-6">
+                <input type="text" class="form-control"
+                       autocomplete="off" autofocus ng-model="chapter" />
+            </div>
+            <div class="col-md-6">
+                <p>What you just typed: <code>[[chapter]]</code></p>
+            </div>
+        </div>
     </div>
 
-	<div class="view" id="experiment" ng-controller="experiment">
-   		<h1>
-		    Angular
-		    <small><i>π = [[pi]]</i></small>
-		</h1>
+    <div ng-show="navCheck('simplepi')" ng-controller="simplepi">
+        <h3>
+            Simplepi
+            <small><i>π = [[pi]]</i></small>
+        </h3>
 
-		<p>This little demo uses two random numbers \(r_1\) and \(r_2\) and
-		then does a comparison $$r_1^2 + r_2^2 &le; 1.0$$ to figure out whether
-		the generated point is inside the first quadrant of the unit circle.</p>
-	</div>
+        <p>This little demo uses two random numbers \(r_1\) and \(r_2\) and
+        then does a comparison $$r_1^2 + r_2^2 &le; 1.0$$ to figure out whether
+        the generated point is inside the first quadrant of the unit circle.</p>
+    </div>
 
-	<div class="view" id="logmessages">
-		<h1>Log Messages</h1>
-		<pre id="log"></pre>
-	</div>
+    <div ng-show="navCheck('logmessages')">
+        <h3>Log Messages</h3>
+        <pre id="log"></pre>
+    </div>
 
-	<div class="view" id="sourcecode">
-		<h1>Source Code</h1>
-		angular.py: {{ include_src('angular.py', 'python') }}
-		angular.html: {{ include_src('templates/angular.html') }}
-	</div>
+    <div ng-show="navCheck('sourcecode')">
+        <h3>Source Code</h3>
+        angular.py: {{ include_src('angular.py', 'python') }}
+        angular.html: {{ include_src('templates/angular.html') }}
+    </div>
+</div>
 </div>
 {% endblock %}
 
@@ -74,32 +84,30 @@ What you just typed: [[chapter]]
 {% block footerscripts %}
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
 <script>
-	var databench = Databench('angular');
-	databench.genericElements.log($('#log'));
+    var databench = Databench('angular');
+    databench.genericElements.log($('#log'));
 
 
-	angular.module('angularApp', [], function ($interpolateProvider) {
-	    $interpolateProvider.startSymbol('[[');
-	    $interpolateProvider.endSymbol(']]');
-	})
-	.controller('navCtrl', ['$scope', '$location', function ($scope, $location) {
-	    $scope.navClass = function (page) {
-	        var currentRoute = $location.path().substring(1) || 'home';
-	        $('.view').hide();
-	        $('#'+currentRoute).show();
-	        return page === currentRoute ? 'active' : '';
-	    };        
-	}])
-	.controller('test', ['$scope', function($scope) {
-		$scope.chapter = 'modify me';
-	}])
-	.controller('experiment', ['$scope', function($scope) {
-		$scope.pi = '0.0 ± 1.0';
+    angular.module('angularApp', [], function ($interpolateProvider) {
+        $interpolateProvider.startSymbol('[[');
+        $interpolateProvider.endSymbol(']]');
+    })
+    .controller('navCtrl', ['$scope', '$location', function ($scope, $location) {
+        $scope.navCheck = function (page) {
+            var currentRoute = $location.path().substring(1) || 'home';
+            return page === currentRoute;
+        };        
+    }])
+    .controller('testingAngular', ['$scope', function($scope) {
+        $scope.chapter = 'modify me';
+    }])
+    .controller('simplepi', ['$scope', function($scope) {
+        $scope.pi = '0.0 ± 1.0';
 
-		databench.signals.on('status', function(msg) {
-			$scope.pi = msg['pi-estimate'].toFixed(3)+' ± '+msg['pi-uncertainty'].toFixed(3);
-			$scope.$apply();
-		});
-	}]);
+        databench.signals.on('status', function(msg) {
+            $scope.pi = msg['pi-estimate'].toFixed(3)+' ± '+msg['pi-uncertainty'].toFixed(3);
+            $scope.$apply();
+        });
+    }]);
 </script>
 {% endblock %}
