--- a/analyses/templates/helloworld.html
+++ b/analyses/templates/helloworld.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Hello World</title>
-</head>
+<head><title>Hello World</title></head>
 <body>
 	<p id="log"></p>
 
@@ -10,8 +8,7 @@
 	<script src="/static/databench.js"></script>
 	<script>
 		var databench = Databench('helloworld');
-		
-		databench.signals.on('log', function(json) {
+		databench.signals.on('status', function(json) {
 			document.getElementById('log').innerHTML = json.message;
 		});
 	</script>
