Use a local version of angular.js.

--- a/analyses/templates/angular.html
+++ b/analyses/templates/angular.html
@@ -84,7 +84,7 @@ Here is the standard code and right below is the live demo.
 
 
 {% block footerscripts %}
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"></script>
+<script src="/angular/static/angular_1.2.15.min.js"></script>
 <script>
     var databench = Databench('angular');
     databench.genericElements.log($('#log'));
