--- a/analyses/templates/redispub.html
+++ b/analyses/templates/redispub.html
@@ -16,14 +16,22 @@
 
 {% block content %}
 {% filter markdown %}
-# Redis Publishing Test
+# Redis Publishing
 
-Publishing is the easy part. This is just the data generator for the `redissub` demo.
+This demo generates numbers and publishes them to a Redis channel. The name of the entity these numbers are generated for is chosen at random and shown next to the _Generator_ headline below. You can interactively change the speed at which the generated numbers change.
+
+Publishing numbers is the easy part. The interesting part happens in the `redissub` demo while keeping this demo open in another browser window. Or even more interesting, keep a few of these open.
 {% endfilter %}
 
-<h3>Generator</h3>
-<span id="genValue">50</span>%
 
+<h3>Generator <small id="genName"></small></h3>
+<span id="genValue">50</span>
+<br />
+<button class="btn btn-default" id="btnSlow">Slow</button>
+<button class="btn btn-danger" id="btnFast">Fast</button>
+
+
+<br /><br />
 <h3>Log</h3>
 <pre id="log"></pre>
 
@@ -39,17 +47,43 @@ redispub.html: {{ include_src('templates/redispub.html') }}
 	var databench = Databench('redispub');
 	databench.genericElements.log($('#log'));
 
+	var defaultSrcNames = [
+		'passing unit tests',
+		'CPU load', 'memory',
+		'network',
+		'disk capacity',
+		'traffic',
+		'database load',
+		'disk load'
+	]
+	var defaultSrcName = defaultSrcNames[
+			Math.floor(Math.random()*defaultSrcNames.length)
+		]+' '+Math.ceil(Math.random()*50.0).toFixed(0);
+	$("#genName").text(defaultSrcName);
 	var time = 0.0;
-	var dt = 0.01;
+	var dt = 0.05;
 	function changeValue() {
 		time += dt;
 		var value = (0.5 + 0.4 * Math.sin(time));
-		databench.signals.emit('stats', {
-			'passingUnitTests': value
-		});
+		var srcName = $("#genName").val();
+		if (!srcName) srcName = defaultSrcName;
+		databench.signals.emit('stats', srcName+'='+value);
 		$("#genValue").text((value*100.0).toFixed(1));
 		setTimeout(changeValue, 100.0);
 	}
 	changeValue();
+
+	$("#btnSlow").on("click", function(e) {
+		dt = 0.001;
+		$("#btnSlow").addClass("btn-primary");
+		$("#btnFast").removeClass("btn-danger");
+		$("#btnFast").addClass("btn-default");
+	});
+	$("#btnFast").on("click", function(e) {
+		dt = 0.05;
+		$("#btnSlow").removeClass("btn-primary");
+		$("#btnFast").addClass("btn-danger");
+		$("#btnSlow").addClass("btn-default");
+	});
 </script>
 {% endblock %}
