--- a/analyses/templates/mpld3PointLabel.html
+++ b/analyses/templates/mpld3PointLabel.html
@@ -10,11 +10,11 @@
 {% filter markdown %}
 # mpld3PointLabel
 
-Testing the PointLabelTooltip plugin of [mpld3](http://mpld3.github.io/). 
-The plot is created with [matplotlib](http://matplotlib.org/) and rendered 
+Testing the PointLabelTooltip plugin of [mpld3](http://mpld3.github.io/).
+The plot is created with [matplotlib](http://matplotlib.org/) and rendered
 in [d3.js](http://d3js.org/) using [mpld3](http://mpld3.github.io/).
 
-If you look at the source code for this template, you will also see that 
+If you look at the source code for this template, you will also see that
 this documentation is a block of `markdown` embedded in the HTML.
 {% endfilter %}
 
@@ -23,8 +23,8 @@ this documentation is a block of `markdown` embedded in the HTML.
 
 <br /><br /><hr />
 <h3>Source Code</h3>
-mpld3PointLabel.py: {{ include_src('mpld3PointLabel.py', 'python') }}
-mpld3PointLabel.html: {{ include_src('templates/mpld3PointLabel.html') }}
+mpld3PointLabel.py: [[ include_src('mpld3PointLabel.py', 'python') ]]
+mpld3PointLabel.html: [[ include_src('templates/mpld3PointLabel.html') ]]
 {% endblock %}
 
 
