--- a/analyses/templates/mpld3pi.html
+++ b/analyses/templates/mpld3pi.html
@@ -15,8 +15,8 @@
 then does a comparison $$r_1^2 + r_2^2 &le; 1.0$$ to figure out whether
 the generated point is inside the first quadrant of the unit circle.</p>
 
-<p>Below are histograms created with <i>matplotlib</i> and rendered 
-in <i>d3.js</i> using <i>mpld3</i>.</p> 
+<p>Below are histograms created with <i>matplotlib</i> and rendered
+in <i>d3.js</i> using <i>mpld3</i>.</p>
 
 <div id="mpld3canvas"></div>
 
@@ -24,8 +24,8 @@ in <i>d3.js</i> using <i>mpld3</i>.</p>
 
 <br /><br /><hr />
 <h3>Source Code</h3>
-mpld3pi.py: {{ include_src('mpld3pi.py', 'python') }}
-mpld3pi.html: {{ include_src('templates/mpld3pi.html') }}
+mpld3pi.py: [[ include_src('mpld3pi.py', 'python') ]]
+mpld3pi.html: [[ include_src('templates/mpld3pi.html') ]]
 {% endblock %}
 
 
