--- a/analyses/templates/redispub.html
+++ b/analyses/templates/redispub.html
@@ -37,8 +37,8 @@ Publishing numbers is the easy part. The interesting part happens in the `rediss
 
 <br /><br /><hr />
 <h3>Source Code</h3>
-redispub.py: {{ include_src('redispub.py', 'python') }}
-redispub.html: {{ include_src('templates/redispub.html') }}
+redispub.py: [[ include_src('redispub.py', 'python') ]]
+redispub.html: [[ include_src('templates/redispub.html') ]]
 {% endblock %}
 
 
