--- a/analyses/templates/redissub.html
+++ b/analyses/templates/redissub.html
@@ -32,8 +32,8 @@ You need something that publishes to the channel. The `redispub` demo does just 
 
 <br /><br /><hr />
 <h3>Source Code</h3>
-redissub.py: {{ include_src('redissub.py', 'python') }}
-redissub.html: {{ include_src('templates/redissub.html') }}
+redissub.py: [[ include_src('redissub.py', 'python') ]]
+redissub.html: [[ include_src('templates/redissub.html') ]]
 {% endblock %}
 
 
