--- a/analyses/templates/simplepi.html
+++ b/analyses/templates/simplepi.html
@@ -19,8 +19,8 @@ the generated point is inside the first quadrant of the unit circle.</p>
 
 <br /><br /><hr />
 <h3>Source Code</h3>
-simplepi.py: {{ include_src('simplepi.py', 'python') }}
-simplepi.html: {{ include_src('templates/simplepi.html') }}
+simplepi.py: [[ include_src('simplepi.py', 'python') ]]
+simplepi.html: [[ include_src('templates/simplepi.html') ]]
 {% endblock %}
 
 
