--- a/analyses/templates/mpld3Drag.html
+++ b/analyses/templates/mpld3Drag.html
@@ -22,8 +22,8 @@ the Python plugin class directly into the `<script>`-tag on the frontend.
 
 <br /><br /><hr />
 <h3>Source Code</h3>
-mpld3Drag.py: {{ include_src('mpld3Drag.py', 'python') }}
-mpld3Drag.html: {{ include_src('templates/mpld3Drag.html') }}
+mpld3Drag.py: [[ include_src('mpld3Drag.py', 'python') ]]
+mpld3Drag.html: [[ include_src('templates/mpld3Drag.html') ]]
 {% endblock %}
 
 
